--- a/Nsiclass.Client/appsettings.json
+++ b/Nsiclass.Client/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=NSI-TEST-03;Initial Catalog=DB_A46C98_class;User Id=adminclass;Password=A120398v;"
-    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DB_A46C98_class;Integrated Security=True;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=NSI-TEST-03;Initial Catalog=DB_A46C98_class;User Id=adminclass;Password=A120398v;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DB_A46C98_class;Integrated Security=True;Trusted_Connection=True;MultipleActiveResultSets=true"
     //"DefaultConnection": "Data Source=SQL6004.site4now.net;Initial Catalog=DB_A46C98_class;User Id=DB_A46C98_class_admin;Password=@ngel0tSamokov;"
     //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DB_A3BA07_class;Integrated Security=True;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
